--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Madden NFL Mobile 17 Hack: Free Coins Madden NFL</title>
+	<title>Madden NFL 18 Hack: Free Coins, Points, Codes and Cash for Madden NFL 18</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" /><!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link href="assets/css/main.css" rel="stylesheet" /><!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]--><!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 </head>
@@ -10,13 +10,13 @@
 <div class="content">
 <div class="inner">
 <header>
-<h2 style="font-size: 210%;">Madden NFL Mobile 17 Hack</h2>
+<h2 style="font-size: 210%;">Madden NFL 18 Hack</h2>
 
 <p style="font-size: 150%;">Click on &quot;Go To Generator&quot; to get started (Max Coins &amp; Cash)</p>
 </header>
 
 <ul class="actions">
-	<li><a class="button huge" href="http://maddenhacker.xyz/">Go To Generator</a></li>
+	<li><a class="button huge" href="http://madden18nfl.com/madden18">Go To Generator</a></li>
 </ul>
 </div>
 </div>
