--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <section id="banner">
 <div class="content">
 <div class="inner">
+<header>	
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="img/header.png" class="img-responsive top-logo" alt="">
+                    </div>
+                </div>
+                <br class="clearfix"/>
+            </div>
+</header>	
 <header>
 <h2 style="font-size: 210%;">Madden NFL 18 Hack</h2>
 
