--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="img/header.png" class="img-responsive top-logo" alt="">
+                        <img src="images/header.png" class="img-responsive top-logo" alt="">
                     </div>
                 </div>
                 <br class="clearfix"/>
