--- a/index.html
+++ b/index.html
@@ -12,14 +12,9 @@
 <div class="inner">
 
 <header>
-	<div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <img src="images/header.png" class="img-responsive top-logo" alt="">
-                    </div>
-                </div>
-                <br class="clearfix"/>
-            </div>
+	
+                        <img src="images/header.png" class="logo1" alt="">
+   
 	
 	
 	
