--- a/madden18/index.html
+++ b/madden18/index.html
@@ -6,7 +6,7 @@
 
 
 <head profile="http://www.w3.org/2005/10/profile">
-        <title>Madden NFL 17 Hack | Get Unlimited Points and Coins</title>
+        <title>Madden NFL 18 Hack | Get Unlimited Points and Coins</title>
         <link rel="icon" type="image/ico" href="img/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="icon" type="image/png" href="img/favicon.html">
@@ -28,14 +28,14 @@
 
         <!-- SEO OPTIMISATION -->
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta name="keywords" content="madden 17 hack, madden 17 mobile hack, madden 17 cheat, madden 17 cheats, madden 17 points hack, madden 17 coins hack, madden 17 mobile cash hack, madden 17 mobile coins hack">
-        <meta name="description" content="MAdden 17 Generator for all Cosnoles and Mobile! We offer free Points, Coins and Cash. Complete a few steps to get your free Madden 17 Resources!">
+        <meta name="keywords" content="madden 18 hack, madden 18 mobile hack, madden 18 cheat, madden 18 cheats, madden 18 points hack, madden 18 coins hack, madden 18 mobile cash hack, madden 18 mobile coins hack, madden 18 nfl, madden 18 codes, madden 18 packs, madden mobile">
+        <meta name="description" content="Madden 18 Generator for all Cosnoles and Mobile! We offer free Points, Coins and Cash. Complete a few steps to get your free Madden NFL 18 Resources!">
 
 
-        <meta property="og:url" content="http://www.madden17hack.com" />
+        <meta property="og:url" content="http://www.madden18nfl.com/madden18" />
         <meta property="og:type" content="website" />
- 	<meta property="og:title" content="Madden 17 Generator - Unlimited Points, Coins and Cash" />
-        <meta property="og:description" content="MAdden 17 Generator can be used to get free Madden 17 Points, Coins and Cash. Click Here if you want to know how to get resources for Madden 17." />
+ 	<meta property="og:title" content="Madden 18 Generator - Unlimited Points, Coins and Cash" />
+        <meta property="og:description" content="MAdden 18 Generator can be used to get free Madden 18 Points, Coins and Cash. Click Here if you want to know how to get resources for Madden 18." />
   	<meta property="og:image" content="https://i.ytimg.com/vi/C61K00F9xaI/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=v5CI0yuAfT14Q0TURxbAsVhxsj8" />
 
 
