--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 	<title>Madden NFL 18 Hack: Free Coins, Points, Codes and Cash for Madden NFL 18</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" /><!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link href="assets/css/main.css" rel="stylesheet" /><!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]--><!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+          
+	<!-- SEO OPTIMISATION -->
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta name="keywords" content="madden 18 hack, madden 18 mobile hack, madden 18 cheat, madden 18 cheats, madden 18 points hack, madden 18 coins hack, madden 18 mobile cash hack, madden 18 mobile coins hack, madden 18 nfl, madden 18 codes, madden 18 packs, madden mobile">
+        <meta name="description" content="Madden 18 Generator for all Cosnoles and Mobile! We offer free Points, Coins and Cash. Complete a few steps to get your free Madden NFL 18 Resources!">
+
+
+        <meta property="og:url" content="http://www.madden18nfl.com/madden18" />
+        <meta property="og:type" content="website" />
+ 	<meta property="og:title" content="Madden 18 Generator - Unlimited Points, Coins and Cash" />
+        <meta property="og:description" content="MAdden 18 Generator can be used to get free Madden 18 Points, Coins and Cash. Click Here if you want to know how to get resources for Madden 18." />
+  	<meta property="og:image" content="https://i.ytimg.com/vi/C61K00F9xaI/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=v5CI0yuAfT14Q0TURxbAsVhxsj8" />
+	
 </head>
 	
 <body class="landing"><!-- Banner -->
