--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="description" content="Madden 18 Generator for all Cosnoles and Mobile! We offer free Points, Coins and Cash. Complete a few steps to get your free Madden NFL 18 Resources!">
 
 
-        <meta property="og:url" content="http://www.madden18nfl.com/madden18" />
+        <meta property="og:url" content="http://www.madden18nfl.com" />
         <meta property="og:type" content="website" />
  	<meta property="og:title" content="Madden 18 Generator - Unlimited Points, Coins and Cash" />
         <meta property="og:description" content="MAdden 18 Generator can be used to get free Madden 18 Points, Coins and Cash. Click Here if you want to know how to get resources for Madden 18." />
@@ -48,10 +48,10 @@
 <section class="wrapper cta" id="one">
 <div class="inner">
 <header>
-<h2 style="font-size: 180%;">Madden NFL - Progress Through Hacking</h2>
+<h2 style="font-size: 180%;">Madden 18 NFL - Progress Through Hacking</h2>
 </header>
 
-<p style="background-color: rgba(0,0,0,0.25);">If you&rsquo;ve started to play Madden NFL on your mobile device, you&rsquo;ll understand the struggle of trying to earn cash. I mean you can buy in game currency straight from the developers, but that costs money?! Who wants to spend money on a mobile game that you might not even be playing next week?</p>
+<p style="background-color: rgba(0,0,0,0.25);">If you&rsquo;ve started to play Madden 18 NFL on your console or mobile device, you&rsquo;ll understand the struggle of trying to earn coins, points, cash , packs and codes. I mean you can buy in game currency, packs and codes straight from the developers or via in app purchases, but that does cost money! And who wants to spend money on a game that you might not even be playing next month?</p>
 </div>
 </section>
 <!-- Three -->
@@ -59,11 +59,11 @@
 <section class="wrapper" id="two" style="padding: 2.5em 0 0 0 ;">
 <div class="inner">
 <header class="major">
-<h2>Our Madden NFL Mobile 17 Hack</h2>
+<h2>Our Madden NFL 18 Hack (Consoles & Mobile)</h2>
 
 <p><span class="image left"><img alt="" src="images/pic01.jpg" /></span></p>
 
-<p><span style="font-size:18px;">We offer our Madden NFL Hack totally free to everyone, you don&rsquo;t have to spend hours grinding games anymore! Simply use our free hack tool and enjoy all of the benefits that the game has to offer. There are thousands of mobile gamers currently playing this game, and a lot of them have already hacked the game in one way or another; so you&rsquo;re not going to be able to compete with them naturally. If you want to beat them at their own game, you need to use our hack tool. No purchase required, simply use our hack tool, enter your username and you&rsquo;ll instantly be very rich (within the game of course!)</span></p>
+<p><span style="font-size:18px;">We offer our Madden 18 NFL Hack totally free to everyone, you don&rsquo;t have to spend hours on the web to find something that is actually working! We spent hours to make this work! Simply use our Madden 18 NFL free hack tool and enjoy all of the benefits that the game has to offer. There are thousands of gamers currently playing this game, and a lot of them have already hacked the game in one way or another; so you&rsquo;re not going to be able to compete with them naturally. If you want to beat them at their own game, you need to use our 100% working hack tool. No purchase required, simply use our Madden NFL 18 hack tool, enter your username and you&rsquo;ll instantly get your resources (within the game of course!)</span></p>
 
 <p></p>
 
