--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
           
 	<!-- SEO OPTIMISATION -->
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta name="keywords" content="madden 18 hack, madden 18 mobile hack, madden 18 cheat, madden 18 cheats, madden 18 points hack, madden 18 coins hack, madden 18 mobile cash hack, madden 18 mobile coins hack, madden 18 nfl, madden 18 codes, madden 18 packs, madden mobile">
+        <meta name="keywords" content="madden 18 hack, madden 18 mobile hack, madden 18 cheat, madden 18 cheats, madden 18 points hack, madden 18 coins hack, madden 18 mobile cash hack, madden 18 mobile coins hack, madden 18 nfl, madden 18 codes, madden 18 packs, madden mobile, mut 18, mut, mut coins, mut points, mut 18 points, mut 18 coins, mut squads, madden ultimate team 18">
         <meta name="description" content="Madden 18 Generator for all Cosnoles and Mobile! We offer free Points, Coins and Cash. Complete a few steps to get your free Madden NFL 18 Resources!">
 
 
         <meta property="og:url" content="http://www.madden18nfl.com" />
         <meta property="og:type" content="website" />
- 	<meta property="og:title" content="Madden 18 Generator - Unlimited Points, Coins and Cash" />
+ 	<meta property="og:title" content="Madden NFL 18 Generator - Unlimited Points, Coins and Cash" />
         <meta property="og:description" content="MAdden 18 Generator can be used to get free Madden 18 Points, Coins and Cash. Click Here if you want to know how to get resources for Madden 18." />
   	<meta property="og:image" content="https://i.ytimg.com/vi/C61K00F9xaI/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=v5CI0yuAfT14Q0TURxbAsVhxsj8" />
 	
@@ -85,9 +85,33 @@
 
 <p><span style="font-size:18px;">Our Madden 18 NFL hack is guaranteed to be the easiest to use. We use the latest technology of encryption so you can be 100% safe! Many require you to connect your console or phone to your computer, or root it. This isn&rsquo;t ideal, as often it does break your manufacturer warranty, and can often be illegal. This means that if you ever have a problem with that console or mobile phone, the manufacturer will refuse to sort it out as you have tampered with the operating system of the phone.</span></p>
 
+<h2>Whats new on Madden NFL 18 ?</h2>
+	
+Madden NFL 18 features a new story mode and new ways to team up and play with friends. 
+
+In Longshot, Madden NFL 18’s new story mode, your decisions shape the journey of forgotten prospect Devin Wade in this football redemption story.
+After three years away from the game, play as former five-star high school quarterback, Devin Wade, as he takes one last shot to hear his name called on NFL Draft day.
+
+<h2>DOMINATE THE GRIDIRON WITH YOUR SQUAD</h2>
+	
+<h3>ONLINE TEAM PLAY IS BACK AND BETTER THAN EVER.</h3>
+	
+Team up with friends in 3 vs. 3 online team play in Madden Ultimate Team. 
+
+<h2>THREE WAYS TO PLAY</h2>
+<h3>OFFENSE, DEFENSE, OR HEAD COACH</h3>
+Combine rosters with two friends to create your MUT Squad and make an impact on the game by selecting one of three roles: Offensive Captain, Defensive Captain, or Head Coach.
+
+Choose offense and bring in your MUT offensive and special teams players or pick defense to use your defensive MUT lineup. If you play as the Head Coach role, manage the clock and select the stadium and uniforms from your Madden Ultimate Team.
+
+
+
 <h2><strong><u>Is this Madden 18 Hack Right for Me?</u></strong></h2>
 
 <p><span style="font-size:18px;">The answer is always yes. You can always make a new account and start legit if you want, but what&rsquo;s the harm with experimenting? You can enjoy playing Madden 18 NFL with unlimited money for a few days, and then when you get bored you can make a new account and start again. It really is that simple. If you don&rsquo;t have much time to spend playing the game, you can use our Madden NFL 18 Hack&nbsp;to give yourself plenty of money so that you can spend your time actually playing the game to have fun, rather than playing the game to simply earn in-game currency &ndash; as we all know, this isn&rsquo;t exactly the most fun thing to do!</span></p>
+
+
+
 
 <center>
 <ul class="actions">
