--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 
 <h2>Whats new on Madden NFL 18 ?</h2>
 	
-Madden NFL 18 features a new story mode and new ways to team up and play with friends. 
+<p><span style="font-size:18px;">Madden NFL 18 features a new story mode and new ways to team up and play with friends.</span></p>
 
-In Longshot, Madden NFL 18’s new story mode, your decisions shape the journey of forgotten prospect Devin Wade in this football redemption story.
-After three years away from the game, play as former five-star high school quarterback, Devin Wade, as he takes one last shot to hear his name called on NFL Draft day.
+<p><span style="font-size:18px;">In Longshot, Madden NFL 18’s new story mode, your decisions shape the journey of forgotten prospect Devin Wade in this football redemption story.
+After three years away from the game, play as former five-star high school quarterback, Devin Wade, as he takes one last shot to hear his name called on NFL Draft day.</span></p>
 
 <h2>DOMINATE THE GRIDIRON WITH YOUR SQUAD</h2>
 	
@@ -100,9 +100,10 @@ Team up with friends in 3 vs. 3 online team play in Madden Ultimate Team.
 
 <h2>THREE WAYS TO PLAY</h2>
 <h3>OFFENSE, DEFENSE, OR HEAD COACH</h3>
-Combine rosters with two friends to create your MUT Squad and make an impact on the game by selecting one of three roles: Offensive Captain, Defensive Captain, or Head Coach.
 
-Choose offense and bring in your MUT offensive and special teams players or pick defense to use your defensive MUT lineup. If you play as the Head Coach role, manage the clock and select the stadium and uniforms from your Madden Ultimate Team.
+<p><span style="font-size:18px;">Combine rosters with two friends to create your MUT Squad and make an impact on the game by selecting one of three roles: Offensive Captain, Defensive Captain, or Head Coach.</span></p>
+
+<p><span style="font-size:18px;">Choose offense and bring in your MUT offensive and special teams players or pick defense to use your defensive MUT lineup. If you play as the Head Coach role, manage the clock and select the stadium and uniforms from your Madden Ultimate Team.</span></p>
 
 
 
