--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ After three years away from the game, play as former five-star high school quart
 	
 <h3>ONLINE TEAM PLAY IS BACK AND BETTER THAN EVER.</h3>
 	
-Team up with friends in 3 vs. 3 online team play in Madden Ultimate Team. 
+<p><span style="font-size:18px;">Team up with friends in 3 vs. 3 online team play in Madden Ultimate Team.</span></p>
 
 <h2>THREE WAYS TO PLAY</h2>
 <h3>OFFENSE, DEFENSE, OR HEAD COACH</h3>
