--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 <p><span style="font-size:18px;">In Longshot, Madden NFL 18’s new story mode, your decisions shape the journey of forgotten prospect Devin Wade in this football redemption story.
 After three years away from the game, play as former five-star high school quarterback, Devin Wade, as he takes one last shot to hear his name called on NFL Draft day.</span></p>
 
+<h2>INTRODUCING MUT SQUADS<h2>
+	
 <h2>DOMINATE THE GRIDIRON WITH YOUR SQUAD</h2>
 	
 <h3>ONLINE TEAM PLAY IS BACK AND BETTER THAN EVER.</h3>
