--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@ After three years away from the game, play as former five-star high school quart
 
 <h2>INTRODUCING MUT SQUADS<h2>
 	
-<h2>DOMINATE THE GRIDIRON WITH YOUR SQUAD</h2>
 	
-<h3>ONLINE TEAM PLAY IS BACK AND BETTER THAN EVER.</h3>
+<h3>DOMINATE THE GRIDIRON WITH YOUR SQUAD - ONLINE TEAM PLAY IS BACK AND BETTER THAN EVER.</h3>
 	
 <p><span style="font-size:18px;">Team up with friends in 3 vs. 3 online team play in Madden Ultimate Team.</span></p>
 
