--- a/madden18/index.html
+++ b/madden18/index.html
@@ -431,7 +431,7 @@ function Change(){
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <p>&copy; Copyright madden17hack.com 2016. All rights reserved.</p>
+                        <p>&copy; Copyright madden18nfl.com 2017. All rights reserved.</p>
                     </div>
                 </div>
             </div>
