--- a/madden18/index.html
+++ b/madden18/index.html
@@ -226,9 +226,9 @@
                                     <div class="row">
                                          <div class="col-md-12">
                                          <center>
-                                          <div class="fb-share-button" data-href="http://www.madden17hack.com" data-layout="button_count" data-size="small" data-mobile-iframe="false"><a class="fb-xfbml-parse-ignore" target="_blank" href="http://madden17hack.com">Share</a></div>
-                                            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://madden17hack.com" data-text="woo! I just got free Points and Coins on Madden 17!" data-hashtags="madden,maddencoins,maddenmobilecoins,maddenpoints">Tweet</a>
-<div class="fb-like" data-href="http://madden17hack.com" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
+                                          <div class="fb-share-button" data-href="http://www.madden18nfl.com" data-layout="button_count" data-size="small" data-mobile-iframe="false"><a class="fb-xfbml-parse-ignore" target="_blank" href="http://madden18nfl.com.com">Share</a></div>
+                                            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://madden18nfl.com" data-text="woo! I just got free Points and Coins on Madden 17!" data-hashtags="madden18,maddennfl18,madden18nfl,madden,maddencoins,maddenmobilecoins,maddenpoints">Tweet</a>
+<div class="fb-like" data-href="http://madden18nfl.com" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
                                         </center>
                                         </div>
                                     </div>
