--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           
 	<!-- SEO OPTIMISATION -->
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta name="keywords" content="madden 18 hack, madden 18 mobile hack, madden 18 cheat, madden 18 cheats, madden 18 points hack, madden 18 coins hack, madden 18 mobile cash hack, madden 18 mobile coins hack, madden 18 nfl, madden 18 codes, madden 18 packs, madden mobile, mut 18, mut, mut coins, mut points, mut 18 points, mut 18 coins, mut squads, madden ultimate team 18">
+        <meta name="keywords" content="madden 18 hack, madden 18 mobile hack, madden 18 cheat, madden 18 cheats, madden 18 points hack, madden 18 coins hack, madden 18 mobile cash hack, madden 18 mobile coins hack, madden 18 nfl, madden 18 codes, madden 18 packs, madden mobile, mut 18, mut, mut coins, mut points, mut 18 points, mut 18 coins, mut squads, madden ultimate team 18, madden 18 free coins, madden 18 free points, madden free coins, madden free points, madden mobile free cash">
         <meta name="description" content="Madden 18 Generator for all Cosnoles and Mobile! We offer free Points, Coins and Cash. Complete a few steps to get your free Madden NFL 18 Resources!">
 
 
