--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	
 <h2 style="font-size: 210%;">Madden NFL 18 Hack</h2>
 
-<p style="font-size: 150%;">Click on &quot;Go To Generator&quot; to get started (Max Coins &amp; Cash)</p>
+<p style="font-size: 150%;">Click on &quot;Go To Generator&quot; to get started (Max Coins, Points &amp; Cash)</p>
 </header>
 
 <ul class="actions">
