--- a/madden18/index.html
+++ b/madden18/index.html
@@ -86,7 +86,7 @@
                             </div>
                             <div class="section-content">
                             <p style="color:white;">Before we add the Points, Coins and Cash to your account you need to VERIFY that you are human and not a software (automated bot) to prevent user's from abusing our generator.</p>
-                            <p style="color:white;">After completing one of the offers, the Madden 17 Resources will be added to your account in just few minutes.</p><br><br>
+                            <p style="color:white;">After completing one of the offers, the Madden 18 / Madden Mobile  Resources will be added to your account in just few minutes.</p><br><br>
                             <center>
                                 <img src="img/button.png" onClick="loadLocker(3525);" />
 
